<b>CARBONE V5.3.003 - 27 septembre 2016 - Mercure</b>

Mise en place de la possibilité de faire un export direct de tous les résultats d'une brique backoffice (merci Carine).
Mise en place d'une fonction permettant de purger les sessions obsolètes (merci Carine).
Correction de l'inclusion du JS et adaptation des modalites de retour dans la fonction growl permettant d'afficher les messages (merci Carine).
Amélioration de l'aide pour les actions au format image/icon au niveau de la brique backoffice (merci Carine).
Rétablissement de la rétro-compatibilité PHP5.4 sur les interceptions d'email (merci Carine).
Amélioration de la tâche clean_cache dans Makefile.
Mise en place du fichier .user.ini et adaptation du fichier .htaccess.
Possibilité de débrayer l'affichage automatique du bouton de retour en visualisation d'une brique form (merci Carine).
Mise en coherence du comportement obtenu en cas d'echec de connexion a la base de donnees des classes adodb et adodb_carbone (merci Carine).
Ajout de la possibilite de tracer les envois effectues via la fonction email (merci Carine).
Patch sécurité dans la gestion des ACL (merci Josua).

<b>CARBONE V5.3.002 - 14 mai 2016 - Mercure</b>

Amélioration du support UTF8 (merci Carine et Sébastien).
Ajout d'une fonctionnalité d'interception d'email (merci Stanislas).
Amélioration du test sur le type MIME lors des upload (merci Carine).
Correction d'un bug de régression sur les exports Excel. 

<b>CARBONE V5.3.001 - 03 juillet 2015 - Pluton</b>

Passage à Bootstrap 3.3.4
Refonte du système de templating des formulaires en se basant sur Bootstrap (merci RomainG).
On utilise maintenant le système de grille sur 12 colonnes.
Permet d'améliorer également les aspects responsives.
Suppression des anciens constructeurs PHP4 dans class_dession.php, adodb_carbone/drivers/ et fpdf, pour la compatibilité PHP7. Il en reste probablement...
Mise à jour de la documentation.

<b>CARBONE V5.2.004 - 23 février 2015 - Columbia</b>
