@@ -94,9 +94,9 @@ define ('CFG_PATH_HTTP_IMAGE', CFG_PATH_HTTP_WEB.'/image');                 // C
 define ('CFG_PATH_HTTP_UPLOAD', CFG_PATH_HTTP_WEB.'/upload');               // Chemin http upload
 
 define ('CFG_TITRE', 'Carbone');                                            // Titre de l'application
-define ('CFG_VERSION', '5.3.003');                                          // Version de l'application
-define ('CFG_VERSION_CARBONE', '5.3.003 Mercure');                          // Version de Carbone
-define ('CFG_DATE', '27/09/2016');                                          // Date de dernières révision de l'application
+define ('CFG_VERSION', '5.3.004');                                          // Version de l'application
+define ('CFG_VERSION_CARBONE', '5.3.004 Jupiter');                          // Version de Carbone
+define ('CFG_DATE', '08/02/2017');                                          // Date de dernières révision de l'application
 define ('CFG_EMAIL', 'armel.fauveau@globalis-ms.com');                        // Email générique de contact
 
 define ('CFG_GLOBALIS_TITRE', 'GLOBALIS media systems');                                        // Globalis Titre
@@ -109,7 +109,7 @@ define ('CFG_PATH_FILE_LOG_SQL', '/tmp/carbone.log');       // Chemin fichier lo
 
 // Themes
 
-define ('CFG_THEME_DEFAULT', 'bootstrap');                  // Theme par defaut
+define ('CFG_THEME_DEFAULT', 'carbone');                  // Theme par defaut
 
 // Langue
 
